# hermes-skill-governance

./: .gitignore  .route-cache.json  .skill-cache.json  README.md  SOUL.md  agent-environment.md  skill-map.yaml
contexts/: agent-environment.md  skill-tree-project.md
contexts/agent-sections/: programmer.md
contexts/chain-mechanism/: CHANGELOG.md  README.md
docs/: ROUTE_ENGINE_ARCHITECTURE.md  maintenance.md  route-keyword-changelog.md  skill-reverse-index.md
docs/directory-tree/: README.md  agent-guide.md  architecture.md  reference.md
pm-agent/: SOUL.md
profiles/docs-writer/: SOUL.md  allowed-skills.md  config.yaml
route-map/: fuzzy-analysis-report.md  index.yaml
scripts/: cache-delegation.py  chain_executor.py  checker_engine.py  clean-shared-output.py  deploy-8090.sh  hermes-agent-add  hermes-mgmt  hermes-skill-add  rebuild-cache.py  route_engine.py  route_engine.py.bak.20260630-223240  route_engine.sh  run_cfnb.py  simulate_matt_chains.py  test_chain_link.py  validate-skill-map-cron.sh  validate-skill-map.py
scripts/hermes_mgmt/: pyproject.toml
scripts/hermes_mgmt/src/hermes_mgmt/: __init__.py  __main__.py
scripts/hermes_mgmt/src/hermes_mgmt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/hermes_mgmt/src/hermes_mgmt/commands/: __init__.py  agent.py  audit.py  fuzzy.py  route.py  skill.py  validate.py
scripts/hermes_mgmt/src/hermes_mgmt/core/: __init__.py  binding_table.py  paths.py  templates.py  transaction.py  validation.py  yaml_ops.py
tests/: test_chain_executor.py  test_checker_engine.py
(+33 files in other folders)
